--- a/src/Components/Modal/modal.scss
+++ b/src/Components/Modal/modal.scss
@@ -12,7 +12,6 @@
   pointer-events: none;
   transition: 0.5s;
   z-index: 100;
-  overflow: scroll;
 
   &__content{
     transform: scale(0.5);
